Security header for swagger. Resolve sender email
